plugins {
    id 'application'
    id 'checkstyle'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'com.gradleup.shadow' version '9.6.1'
}

repositories {
    mavenCentral()
}

application {
    mainClass = 'koko.Launcher'
}

javafx {
    version = '25'
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

checkstyle {
    toolVersion = '11.0.0'
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.19.2'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.14.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.14.1'
}

tasks.named('test') {
    useJUnitPlatform()
}

shadowJar {
    archiveFileName = 'koko.jar'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
